--- a/bms/templates/bms/user_config/org_user_config.html
+++ b/bms/templates/bms/user_config/org_user_config.html
@@ -19,7 +19,7 @@
             {#sortOrder: 'asc',#}
             border: true,
             remoteSort: false,
-            idField: 'UserID',
+            idField: 'id',
             pageSize: 10,
             pagination: true,
             rownumbers: true,
