--- a/bms/templates/bms/user_config/user_group_config.html
+++ b/bms/templates/bms/user_config/user_group_config.html
@@ -1,9 +1,10 @@
-<script>
+{#用户组分配页面#}
 
+<script>
     $(function () {
         initRoleTree();
-        {#initUserGrid();#}
-        {#AddUserGrid();#}
+        initUserGrid();
+        AddUserGrid();
     });
     function initRoleTree() {
         $('#RoleTree').tree({
@@ -13,20 +14,228 @@
                 // 在用户点击的时候提示
                 $('#UserRoleGrid').datagrid('loadData', { total: 0, rows: [] });
                 $('#UserRoleGrid').datagrid('load', {
-                    id: node.id
+                    group_id: node.id
                 });
             }
         })
+    }
+
+    function initUserGrid() {
+        $('#UserRoleGrid').datagrid({
+            iconCls: 'icon-user',
+            loadMsg: '数据加载中...',
+            nowrap: true,
+            autoRowHeight: true,
+            striped: true,
+            url: '../bms/main_user_list',
+            //sortName: 'UserID',
+            //sortOrder: 'asc',
+            border: true,
+            remoteSort: false,
+            idField: 'id',
+            pageSize: 30,
+            pagination: true,
+            singleSelect: false,
+            fitColumns: false,
+            fit:false,
+            columns: [[
+                { field: 'ck', checkbox: true },
+                { field: 'id', title: 'ID', width: 150, sortable: true },
+                { field: 'username', title: '用户名称', width: 150, sortable: true }
+            ]],
+            toolbar: [{
+                id: 'btnadd',
+                text: '添加用户组关系',
+                iconCls: 'icon-add',
+                handler: function () {
+                    AddUserRoleDialog();
+                }
+            }, '-', {
+                id: 'btncut',
+                text: '删除用户组关系',
+                iconCls: 'icon-cut',
+                handler: function () {
+                    DeleteUserRole();
+                }
+            }, '-']
+        });
+    }
+
+    //添加用户角色对话框
+    function AddUserRoleDialog() {
+        var selectRole = $("#RoleTree").tree("getSelected");
+        if (selectRole == null) {
+            $.messager.alert("友情提示", "请先选择一个组");
+            return;
+        }
+        $('#AddUserRoleDialog').dialog('open').dialog('setTitle', '添加用户');
+        $('#AddUserGrid').datagrid('clearSelections');
+        $('#AddUserGrid').datagrid('reload');
+    }
+
+    //添加用户列表
+    function AddUserGrid() {
+        $('#AddUserGrid').datagrid({
+            title: '用户列表',
+            iconCls: 'icon-user',
+            loadMsg: '数据加载中...',
+            nowrap: true,
+            autoRowHeight: true,
+            striped: true,
+            url: '../bms/main_user_list',
+            {#sortName: 'id',#}
+            {#sortOrder: 'asc',#}
+            border: true,
+            remoteSort: false,
+            idField: 'id',
+            //pageSize: 10,
+            //pagination: true,
+            rownumbers: true,
+            singleSelect: false,
+            fitColumns: true,
+            columns: [[
+                { field: 'ck', checkbox: true },
+                { field: 'id', title: 'ID', width: 50, sortable: true },
+                { field: 'username', title: '用户名', width: 300, sortable: true }
+
+            ]],
+            toolbar: [{
+                id: 'btnadd',
+                text: '添加用户',
+                iconCls: 'icon-add',
+                handler: function () {
+                    AddUserRole();
+                }
+            }, '-', {
+                id: 'btnrefresh',
+                text: '刷新',
+                iconCls: 'icon-reload',
+                handler: function () {
+                    AddUserGrid();
+                }
+            }]
+        });
+    }
+    //添加用户角色关系
+    function AddUserRole() {
+        var selectRole = $("#RoleTree").tree("getSelected");
+        if (selectRole==null) {
+            $.messager.alert("友情提示", "请先选择一个需要添加用户的组");
+            return;
+        }
+        var RoleID = selectRole.id;
+        var UserIDs="";
+        //debugger
+        var selectsUser = $("#AddUserGrid").datagrid("getSelections");
+        if (selectsUser.length != 0) {
+            for (var i = 0; i < selectsUser.length; i++) {
+                UserIDs +=selectsUser[i].id + ",";
+            }
+        } else {
+            $.messager.alert("友情提示", "请先选择一个用户");
+            return;
+        }
+
+        var postdata = {
+            RoleID: RoleID,
+            UserIDs: UserIDs.slice(0, UserIDs.length-1)
+        };
+
+        $.ajax({
+            type: 'POST',
+            url: '../bms/add_user_to_group',
+            cache: false,
+            {#headers: headers,#}
+            data: postdata,
+            success: function (data) {
+                if (data && data.success=='true') {
+                    $.messager.show({
+                        title: '我的消息',
+                        msg: '添加用户组成功。',
+                        timeout: 5000,
+                        showType: 'slide'
+                    });
+                    $("#AddUserRoleDialog").dialog('close');
+                    $("#UserRoleGrid").datagrid('reload');
+                }
+                else {
+                    alert("添加失败，请检查"+data.msg);
+                }
+            },
+            error: function (data) {
+                $.messager.alert('错误', data.responseText);
+            }
+        });
+    }
+
+    //删除用户角色关系
+    function DeleteUserRole() {
+
+        var selectRole = $("#RoleTree").tree("getSelected");
+        if (selectRole == null) {
+            $.messager.alert("友情提示", "请先选择一个需要删除用户的角色");
+            return;
+        }
+        var selectsUser = $("#UserRoleGrid").datagrid("getSelections");
+        if (selectsUser.length == 0) {
+            $.messager.alert("友情提示", "请先选择一个需要删除的用户");
+            return;
+        }
+        var UserIDs = "";
+        var RoleID = selectRole.id;
+        var selectsUser = $("#UserRoleGrid").datagrid("getSelections");
+        if (selectsUser.length != 0) {
+            for (var i = 0; i < selectsUser.length; i++) {
+                UserIDs += selectsUser[i].id + ",";
+            }
+        } else {
+            $.messager.alert("友情提示", "请先选择一个用户");
+            return;
+        }
+        var postdata = {
+            RoleID: RoleID,
+            UserIDs: UserIDs.slice(0, UserIDs.length - 1)
+        };
+        $.messager.confirm("删除信息", "您确认删除这些用户角色关系吗？", function (DeleteUserInfo) {
+            if (DeleteUserInfo) {
+
+                $.ajax({
+                    type: 'POST',
+                    url: '../bms/remove_user_from_group',
+                    cache: false,
+                    {#headers: headers,#}
+                    data: postdata,
+                    success: function (data) {
+                        if (data && data.success=='true') {
+                            $.messager.show({
+                                title: '我的消息',
+                                msg: '删除用户角色成功。',
+                                timeout: 5000,
+                                showType: 'slide'
+                            });
+
+                            $("#UserRoleGrid").datagrid('reload');
+                        }
+                        else {
+                            alert("删除失败，请检查"+data.msg);
+                        }
+                    },
+                    error: function (data) {
+                        $.messager.alert('错误', data.responseText);
+                    }
+                });
+            }
+        });
     }
 </script>
 
 
 <div id="cc" class="easyui-layout" style="height:700px;" fit="true">
-    <div data-options="region:'west',title:'角色列表',split:true,collapsible:false" style="width:150px;">
+    <div data-options="region:'west',title:'组列表',split:true,collapsible:false" style="width:200px;">
 {#        <img id="RoleTreeloading" src="~/Images/loading.gif" width="160" height="160" />#}
         <ul id="RoleTree"></ul>
     </div>
-    <div data-options="region:'center',title:'人员列表-选择角色后自动更新'" style="padding:5px;background:#eee;height:400px;">
+    <div data-options="region:'center',title:'人员列表-选择组后自动更新'" style="padding:10px 10px;background:#eee;height:400px;width:100%">
         <table id="UserRoleGrid"></table>
     </div>
 </div>
