--- a/bms/templates/bms/user_config/org_user_config.html
+++ b/bms/templates/bms/user_config/org_user_config.html
@@ -351,7 +351,7 @@
                 </tr>
                 <tr>
                     <td><label for="email">邮箱：</label></td>
-                    <td><input class="easyui-validatebox form-control" type="text" id="email" name="email" data-options="validType:'length[1,200]'" style="width:350px;" /></td>
+                    <td><input class="easyui-validatebox form-control" type="text" id="email" name="email" data-options="validType:['email','length[0,200]']'" style="width:350px;" /></td>
                 </tr>
                 <tr>
                     <td><label for="position">岗位：</label></td>
@@ -396,7 +396,7 @@
                 </tr>
                 <tr>
                     <td><label for="email">邮箱：</label></td>
-                    <td><input class="easyui-validatebox form-control" type="text" id="email1" name="email" data-options="validType:'length[1,200]'" style="width:350px;" /></td>
+                    <td><input class="easyui-validatebox form-control" type="text" id="email1" name="email" data-options="validType:['email','length[0,200]']" style="width:350px;" /></td>
                 </tr>
                 <tr>
                     <td><label for="position">岗位：</label></td>
