--- a/bms/templates/bms/rule_config/fund_in_config.html
+++ b/bms/templates/bms/rule_config/fund_in_config.html
@@ -127,7 +127,7 @@
     <div data-options="region:'west',title:'机构列表',split:true,collapsible:false" style="width:200px;">
         <ul id="OrgTree"></ul>
     </div>
-    <div data-options="region:'center',title:'入金规则-选择机构后自动更新（系统优先采用各自机构的配置参数，没有配置机构参数就用默认参数。）'"
+    <div data-options="region:'center',title:'入金规则-默认显示全局规则，选择机构后可对机构的规则进行个性化定制。'"
          style="padding:10px 10px;background:#eee;height:400px;width:100%">
         <form id="FundInForm" method="post" novalidate="novalidate" style="margin-left: 50px">
             <table id="tblAdd" class="self-input-table">
