--- a/bms/templates/bms/rule_config/fund_out_config.html
+++ b/bms/templates/bms/rule_config/fund_out_config.html
@@ -129,14 +129,13 @@
     <div data-options="region:'west',title:'组列表',split:true,collapsible:false" style="width:200px;">
         <ul id="OrgTree1"></ul>
     </div>
-    <div data-options="region:'center',title:'出金规则-选择组后自动更新'" style="padding:10px 10px;background:#eee;height:400px;width:100%">
+    <div data-options="region:'center',title:'出金规则-默认显示全局规则，选择机构后可对机构的规则进行个性化定制。'" style="padding:10px 10px;background:#eee;height:400px;width:100%">
         <form id="FundOutForm" method="post" novalidate="novalidate" style="margin-left: 50px">
             <table id="tblAdd" class="self-input-table">
                 <tr>
                     <td><label for="org">目前显示的配置：</label></td>
                     <td>
                         <input class="easyui-textbox form-control" type="text" id="org" name="org" data-options="" style="width:350px;" />
-
                     </td>
                 </tr>
                 <tr>
